2010-02-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#155074 When tapped on close button App menu is coming up and hence
		  not able to close the application in a given scenario.

	Stupid thinko.

	* src/mb/hd-app.c (hd_app_request_geometry):
	  Pack the button at the end of the decor correctly.

2010-02-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137235 - Transparent menu corners
	
	* src/home/hd-clutter-cache.c: Fix stretching of textures
	* src/main.c: add "status-menu" client type for theme.xml
	* src/mb/hd-app-menu.c: Remove hd_app_menu_request_geometry, as it was
	  just a copy/paste job.
	* src/mb/hd-decor.c: Only add progress indictor if we had title text,
	  cope with non-north decors, and textures other than the original
	  WindowManagerStuff texture.
	* src/util/hd-transition.c: Still allow windows that go off the top of
	  the screen to be animated with a popup animation.

2010-02-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.130-1

2010-02-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#155060 Desktop hangs after installing an application
		  from Application Manager

	Scene: you're in launcher and the launcher page is being repopulated.
	This case the launcher switches to HOME state, which initiates the
	launcher-out transition which in the end is supposed to hide the
	launcher.  Since the page is destroyed in the middle it doesn't get
	a chance to hide the launcher, which as a consequence remains clutter
	visible in HOME state, preventing the Tasks button from functioning.

	* src/launcher/hd-launcher-page.c (hd_launcher_page_dispose):
	  Stop the $transition rather than mindlessly unreffing it.
	  Stop will also clean up.

2010-01-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#154727 Notification glow effect should fire up when screen
		  is unlocked

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler):
	  (Re)start pulsating the tasks button when display_status_ind
	  becomes "on".
